syntax = "proto3";

package inventory;

option java_multiple_files = true;

message OrderRequest {
  string productName = 1;
  int32 quantity = 2;
}

message OrderResponse {
  bool success = 1;
  string message = 2;
}

service InventoryService {
  rpc PlaceOrder(OrderRequest) returns (OrderResponse);
  rpc ReleaseStock(OrderRequest) returns (OrderResponse);
}